--- a/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_1.tex
+++ b/documents/Cuarto/Primer Cuatrimestre/Análisis Funcional/Tema_1.tex
@@ -1,4 +1,4 @@
-\chapter*{Espacios de Hilbert}
+\section{Espacios de Hilbert}
 
 Recordemos que un espacio de Hilbert es un par $(H, (\cdot, \cdot))$ donde $H$ es un espacio vectorial y $(\cdot, \cdot)$ es una función bilineal simétrica y definida positiva.
 
@@ -26,7 +26,7 @@ Recordemos que un espacio de Hilbert es un par $(H, (\cdot, \cdot))$ donde $H$ e
             \end{array}
         \right.
     \end{gather*}
-    Notaremos a dicha $u$ por $P_Kf$ y \textbf{diremos que es la proyección de $f$ sobre $K$}
+    Notaremos a dicho $u$ por $P_Kf$ y \textbf{diremos que es la proyección de $f$ sobre $K$}
 
     \begin{proof}
         En primer lugar tendremos que ver que $d(f,K)=\inf\{\|f-v\|: v\in K\}$ existe y se alcanza. Al ser un ínfimo de cantidades positivas sabemos que existe y nos quedará ver que se alcanza.
@@ -97,4 +97,158 @@ Recordemos que un espacio de Hilbert es un par $(H, (\cdot, \cdot))$ donde $H$ e
         \end{itemize}
         Se deja como ejercicio demostrar la otra implicación y la unicidad de $u$.
     \end{proof}
+\end{teo}
+
+% 19 de septiembre
+\begin{prop}
+    La aplicación dada por
+    \begin{align*}
+        P_K: H &\to H\\
+        f &\mapsto P_Kf
+    \end{align*}
+    es Lipschitziana, es decir, $\|P_Kf_1 - P_Kf_2\| \leq \|f_1-f_2\|$ para todo $f_1,f_2\in H$.
+
+    \begin{proof}
+        Tomamos $f_1,f_2\in H$ y consideramos $u_1 = P_Kf_1$, $u_2 = P_Kf_2$ y tenemos que 
+        \begin{gather*}
+            (f_1-u_1, v-u_1) \leq 0 \ \ \ \forall v \in K\\
+            (f_2-u_2, v-u_2) \leq 0 \ \ \ \forall v \in K
+        \end{gather*}
+        De aquí obtenemos que 
+        \begin{gather*}
+            (f_1-u_1, u_2-u_1) \leq 0\\
+            (f_2-u_2, u_1-u_2) \leq 0
+        \end{gather*}
+        Aprovechando la bilinealidad tenemos que
+        \begin{gather*}
+            (f_2-u_2, u_2-u_1) \geq 0 \Rightarrow ((f_1-u_1)-(f_2-u_2), u_2-u_1) \leq 0
+        \end{gather*}
+        Y además
+        \begin{gather*}
+            ((f_1-u_1)-(f_2-u_2), u_2-u_1) = ((f_1-f_2)-(u_1-u_2), u_2-u_1) =\\= (f_1-f_2, u_2-u_1) + (u_2-u_1, u_2-u_1)
+        \end{gather*}
+        Y aplicando la desigualdad de Cauchy-Schwarz
+        \begin{align*}
+            \|u_2-u_1\|^2 &= (u_2-u_1, u_2-u_1) \leq -(f_1-f_2, u_2-u_1)\\
+            &\leq \|f_1-f_2\| \|u_2-u_1\| \Rightarrow \|u_2-u_1\| \leq \|f_1-f_2\|
+        \end{align*}
+    \end{proof}
+\end{prop}
+
+\begin{coro}[Proyección ortogonal]
+    Sea $H$ un espacio de Hilbert y $\emptyset \neq M \subset H$ un subespacio vectorial cerrado. Entonces se tiene que 
+    \begin{gather*}
+        \forall f \in H \ \ \ \exists_1u\in M \text{ tal que } \|f-u\| = dist(f,M)
+    \end{gather*}
+    Además, $u$ está caracterizado por
+    \begin{itemize}
+        \item $u\in M$
+        \item $(f-u, w) = 0$ \ \ \ $\forall w \in M$
+    \end{itemize}
+
+    Además, $P_M:H \to H$ es lineal.
+    \begin{proof}
+        Comencemos con la primera parte del corolario. Sabemos que $u\in K$ y $(f-u, v-u)\leq 0$\ \ \ $\forall v \in M$ del teorema de la proyección. Tendremos que probar la equivalencia entre esto y $(f-u, w) = 0$ \ \ \ $\forall w \in M$ cuando $M$ es un subespacio vectorial. Veamos ambas implicaciones:
+        \begin{itemize}
+            \item[$\Leftarrow$)] Evidente por ser $M$ un espacio vectorial.
+            \item[$\Rightarrow$)] Tenemos que $(f-u, v-u)\leq 0$\ \ \ $\forall v \in M$. Tomamos ahora $v\in M$, $t\neq 0$ y como $M$ es un subespacio vectorial, entonces $\frac{v}{t}\in M$ por lo que
+            
+            \begin{gather*}
+                (f-u, \frac{v}{t}-u) \leq 0 \ \ \ \forall v\in M, \ t\neq 0
+            \end{gather*}
+            Hagamos una distinción de casos:
+            \begin{gather*}
+                \left\{
+                    \begin{array}{c c c}
+                        \text{Si } t>0 & \Rightarrow  &(f-u,v-tu) \leq 0 \ \ \ \forall t>0, v\in M\\
+                        \text{Si } t<0 & \Rightarrow  &(f-u,v-tu) \geq 0 \ \ \ \forall t<0, v\in M\\
+                    \end{array}
+                \right.
+            \end{gather*}
+            Tomando límite cuando $t$ tiende a $0$
+            \begin{gather*}
+                \left\{
+                    \begin{array}{c}
+                        (f-u,v) \leq 0 \ \ \ \forall t>0, v\in M\\
+                        (f-u,v) \geq 0 \ \ \ \forall t<0, v\in M\\
+                    \end{array}
+                \right.
+            \end{gather*}
+            Y por tanto $(f-u,v) = 0$ \ \ \ $\forall v\in M$
+        \end{itemize}
+
+        La demostración de que $P_M$ es lineal se deja como ejercicio.
+    \end{proof}
+\end{coro}
+
+\section{Espacios Duales}
+
+\begin{definicion}[Dual algebráico]
+    Sea $E$ un espacio vectorial, llamamos \textbf{dual algebráico} al siguiente espacio:
+    \begin{gather*}
+        E^\# = \{f: E \to \bb{R}: f \text{ es lineal}\}
+    \end{gather*}
+\end{definicion}
+
+\begin{definicion}[Dual topológico]
+   Dado $(E, \|\cdot\|)$ un espacio normado, llamamos \textbf{dual topológico} a
+    \begin{gather*}
+        E^\# = \{f: E \to \bb{R}: f \text{ es lineal y continua}\}
+    \end{gather*} 
+\end{definicion}
+
+
+\begin{observacion}
+    Si tenemos $(E, \|\cdot\|_E)$, $(F, \|\cdot\|_F)$ dos espacios normados y una aplicación $T:E\to F$ lineal. Son equivalentes:
+    \begin{enumerate}
+        \item[(i)] $T$ es continua
+        \item[(ii)] $T$ es continua en $0$
+        \item[(iii)] $T(B_E(0,1))$ es un conjunto acotado de $F$, es decir que $\exists R>0 : \|T(x)\|_F \leq R\ \ \ \forall x\in E$ con $\|x\|<1$
+        \item[(iv)] $T$ es acotada, es decir, $T(A)$ es acotada en $F$ para todo $A\subset E$ que esé acotado
+        \item[(v)] $T$ es Lipschitziana.
+    \end{enumerate}
+    La demostración se deja como ejercicio.
+\end{observacion}
+
+\begin{definicion}
+    Dado $E$ un espacio vectorial, consideramos su dual topológico $E^*$ y definimos la norma
+    \begin{gather*}
+        \|f\|_{E^*} := \sup_{\|x\|\leq 1} \|f(x)\| \ \ \ \forall f \in E^*
+    \end{gather*}
+\end{definicion}
+
+\begin{ejercicio} % Hacer para el miércoles que viene
+    Demostrar que $\|f\|_{E^*}$ es una norma.
+\end{ejercicio}
+
+\begin{ejercicio}
+    Demostrar que $(E^*, \|\cdot\|_{E*})$ es de Banach.
+\end{ejercicio}
+
+\begin{ejercicio}
+    Demostrar que $\|f\|_{E^*} = \inf\{M\geq 0 : \|f(x)\| \leq M\|x\|_E\ \ \forall x \in E\}$
+\end{ejercicio}
+
+\section{Espacio Dual de un Espacio de Hilbert}
+
+\begin{observacion}
+    Es elemental que si tomo $v\in H$, entonces la aplicación
+    \begin{align*}
+        \varphi_v : H &\to \bb{R}\\
+        u &\mapsto \varphi(u) = (u,v)
+    \end{align*}
+    verifica que $\varphi_v\in H^*$ y $\|\varphi_v\|_{H^*} = \|v\|_H$. Además, podemos definir la siguiente aplicación:
+    \begin{align*}
+        \Psi: H &\to H^*\\
+        v &\mapsto \phi_v
+    \end{align*}
+    que será lineal por lo que tenemos que un espacio de Hilbert y su dual topológico serán isomorfos.
+
+    \begin{proof}
+        La demostración se deja como ejercicio.
+    \end{proof}
+\end{observacion}
+
+\begin{teo}[Teorema de Riesz-Fischer]
+    Para toda $\varphi\in H^*$, se tiene que $\exists_1 v\in H$ tal que $\varphi(u)=(u,v)\ \ \ \forall u\in H$. Además, se tiene que $\|\varphi\|_{H^*} = \|v\|_H$
 \end{teo}
